--- a/server/.eslintrc.json
+++ b/server/.eslintrc.json
@@ -1,3 +1,11 @@
 {
-	"extends": "../.eslintrc.json"
+	"parser": "@typescript-eslint/parser",
+	"parserOptions": {
+		"ecmaVersion": 2018,
+		"sourceType": "module"
+	},
+	"extends": [
+		"plugin:@typescript-eslint/recommended",
+		"prettier/@typescript-eslint"
+	]
 }
