--- a/server/package.json
+++ b/server/package.json
@@ -1,19 +1,38 @@
 {
 	"name": "server",
 	"version": "1.0.0",
+	"private": true,
+	"workspaces": {
+		"nohoist": [
+			"husky"
+		]
+	},
 	"main": "index.js",
 	"license": "MIT",
-	"scripts": {
-		"build": "tsc",
-		"lint": "tsc --noEmit && eslint . --cache --fix --ext .ts"
-	},
 	"dependencies": {
 		"express": "^4.17.1"
 	},
 	"devDependencies": {
 		"@types/express": "^4.17.2",
-		"@types/node": "^12.12.7",
+		"@typescript-eslint/eslint-plugin": "^2.7.0",
+		"@typescript-eslint/parser": "^2.7.0",
 		"eslint": "^6.6.0",
+		"eslint-config-prettier": "^6.5.0",
+		"husky": "^3.0.9",
+		"prettier": "^1.19.1",
 		"typescript": "^3.7.2"
+	},
+	"scripts": {
+		"format": "prettier --write \"**/*.{js,css,md}\"",
+		"lint": "tsc --noEmit && eslint . --cache --ext .ts,.tsx",
+		"lint:fix": "tsc --noEmit && eslint . --cache --fix --ext .ts,.tsx",
+		"precommit": "lint-staged",
+		"build": "tsc"
+	},
+	"lint-staged": {
+		"*.{ts,tsx,js,jsx}": [
+			"eslint --fix",
+			"git add"
+		]
 	}
 }
