feat: add client test script in travis config
트래비스 컨피그에 기존에 있던 트래비스  클라이언트 스크립트 파일을 옮기고 기존 파일 삭제

--- a/.travis.yml
+++ b/.travis.yml
@@ -52,8 +52,10 @@ jobs:
 
     - stage: "Client Deploy"
       if: branch = client-develop OR branch = client-master
-      before_script:
+      install:
+        - npm install
       script:
+        - npm run test:src && npm run test:cypress
       deploy:
         provider: script
         script: 
