chore: add server dir structure
도커를 이용한 개발 환경 구성 및 서버 구성 디렉토리 구조 확립

--- a/server/package.json
+++ b/server/package.json
@@ -20,14 +20,17 @@
 		"eslint-config-prettier": "^6.5.0",
 		"husky": "^3.0.9",
 		"prettier": "^1.19.1",
+		"ts-node": "^8.5.0",
 		"typescript": "^3.7.2"
 	},
 	"scripts": {
+		"start:prod": "node bin/www.js",
+		"start:dev": "nodemon",
+		"build": "tsc",
 		"format": "prettier --write \"**/*.{js,css,md}\"",
 		"lint": "tsc --noEmit && eslint . --cache --ext .ts,.tsx",
 		"lint:fix": "tsc --noEmit && eslint . --cache --fix --ext .ts,.tsx",
-		"precommit": "lint-staged",
-		"build": "tsc"
+		"precommit": "lint-staged"
 	},
 	"lint-staged": {
 		"*.{ts,tsx,js,jsx}": [
