--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -9,6 +9,7 @@
 	},
 	"extends": [
 		"react-app",
+		"airbnb",
 		"plugin:@typescript-eslint/recommended",
 		"prettier/@typescript-eslint"
 	],
@@ -28,6 +29,12 @@
 		"jest/no-focused-tests": "error",
 		"jest/no-identical-title": "error",
 		"jest/prefer-to-have-length": "warn",
-		"jest/valid-expect": "error"
+		"jest/valid-expect": "error",
+		"import/no-unresolved": "off",
+		"react/jsx-filename-extension": [
+			"error",
+			{ "extensions": [".ts", ".tsx"] }
+		],
+		"import/no-extraneous-dependencies": "off"
 	}
 }
