--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
 		"server"
 	],
 	"scripts": {
+		"lint": "run-p lint:server lint:client",
+		"lint:server": "yarn workspace server lint:fix",
+		"lint:client": "yarn workspace client lint:fix",
 		"precommit:server": "yarn workspace server precommit",
 		"precommit:client": "yarn workspace client precommit",
 		"precommit": "run-p precommit:server precommit:client",
@@ -18,13 +21,6 @@
 	"devDependencies": {
 		"@commitlint/cli": "^8.2.0",
 		"@commitlint/config-conventional": "^8.2.0",
-		"@typescript-eslint/eslint-plugin": "^2.7.0",
-		"@typescript-eslint/parser": "^2.7.0",
-		"eslint": "^6.6.0",
-		"eslint-config-airbnb-base": "^14.0.0",
-		"eslint-config-prettier": "^6.5.0",
-		"eslint-plugin-import": "^2.18.2",
-		"eslint-plugin-prettier": "^3.1.1",
 		"husky": "^3.0.9",
 		"lint-staged": "^9.4.2",
 		"npm-run-all": "^4.1.5",
