--- a/server/.eslintrc.json
+++ b/server/.eslintrc.json
@@ -2,10 +2,31 @@
 	"parser": "@typescript-eslint/parser",
 	"parserOptions": {
 		"ecmaVersion": 2018,
-		"sourceType": "module"
+		"sourceType": "module",
+		"ecmaFeatures": {
+			"impliedStrict": true
+		}
 	},
 	"extends": [
+		"airbnb",
 		"plugin:@typescript-eslint/recommended",
 		"prettier/@typescript-eslint"
-	]
+	],
+	"plugins": ["jest"],
+	"env": {
+		"jest/globals": true
+	},
+	"rules": {
+		"jest/no-disabled-tests": "warn",
+		"jest/no-focused-tests": "error",
+		"jest/no-identical-title": "error",
+		"jest/prefer-to-have-length": "warn",
+		"jest/valid-expect": "error",
+		"import/no-unresolved": "off",
+		"react/jsx-filename-extension": [
+			"error",
+			{ "extensions": [".ts", ".tsx"] }
+		],
+		"import/no-extraneous-dependencies": "off"
+	}
 }
