--- a/server/package.json
+++ b/server/package.json
@@ -4,20 +4,27 @@
 	"private": true,
 	"workspaces": {
 		"nohoist": [
-			"husky"
+			"husky",
+			"eslint"
 		]
 	},
 	"main": "index.js",
 	"license": "MIT",
 	"dependencies": {
-		"express": "^4.17.1"
+		"eslint-config-airbnb": "^18.0.1",
+		"eslint-plugin-jest": "^23.0.3",
+		"express": "^4.17.1",
+		"jest": "^24.9.0",
+		"ts-jest": "^24.1.0"
 	},
 	"devDependencies": {
 		"@types/express": "^4.17.2",
 		"@typescript-eslint/eslint-plugin": "^2.7.0",
 		"@typescript-eslint/parser": "^2.7.0",
 		"eslint": "^6.6.0",
+		"eslint-config-airbnb-base": "^14.0.0",
 		"eslint-config-prettier": "^6.5.0",
+		"eslint-plugin-import": "^2.18.2",
 		"husky": "^3.0.9",
 		"prettier": "^1.19.1",
 		"ts-node": "^8.5.0",
