--- a/server/.eslintrc.json
+++ b/server/.eslintrc.json
@@ -8,7 +8,6 @@
 		}
 	},
 	"extends": [
-		"airbnb",
 		"plugin:@typescript-eslint/recommended",
 		"prettier/@typescript-eslint"
 	],
@@ -21,12 +20,6 @@
 		"jest/no-focused-tests": "error",
 		"jest/no-identical-title": "error",
 		"jest/prefer-to-have-length": "warn",
-		"jest/valid-expect": "error",
-		"import/no-unresolved": "off",
-		"react/jsx-filename-extension": [
-			"error",
-			{ "extensions": [".ts", ".tsx"] }
-		],
-		"import/no-extraneous-dependencies": "off"
+		"jest/valid-expect": "error"
 	}
 }
